# MercadoPesquisa

./: .env.example  .gitignore  README.md  atacadao_debug.html  bd.md  carrefour_debug.html  comandos.md  diagnostico.py  diagnosticoAtacadao.py  diagnosticoCarre.py  diagnostico_correcao.py  diagnosticopaodeacucar.py  fluxo.md  fluxoDados.md  pyproject.toml  resultados_carrefour.csv  test_atacadao_scraper.py  test_paodeacucar_scraper.py
config/: __init__.py  logging_config.py  markets.py  settings.py
data/: .gitkeep
diagnostico/20251224_163901/: RELATORIO.txt  atacadao_page.html  carrefour_page.html  extra_classes.txt  extra_page.html  pao_acucar_classes.txt  pao_acucar_page.html
diagnostico/20251224_170831/: RELATORIO.txt  atacadao_classes.txt  atacadao_page.html  carrefour_classes.txt  carrefour_page.html  extra_page.html  pao_acucar_page.html
logs/: .gitkeep
src/: __init__.py  cli.py  collector.py
src/core/: __init__.py  constants.py  exceptions.py  models.py  types.py
src/pipeline/: __init__.py  normalizer.py  parser.py  pipeline.py  price_calculator.py
src/scrapers/: __init__.py  atacadao.py  base.py  carrefour.py  extra.py  manager.py  pao_acucar.py  rate_limiter.py
src/storage/: __init__.py  base.py  file_storage.py  manager.py  sqlite_storage.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  html_samples.py  raw_products.py
tests/integration/: __init__.py  test_collector.py  test_pipeline.py  test_storage.py
tests/unit/: __init__.py  test_models.py  test_normalizer.py  test_parser.py  test_price_calculator.py
(+1 files in other folders)
